# Tradeforces

./: .gitignore  Excalidraw.excalidraw  README.md  Steps_for_creating_microVM_setup.txt  folder_tree.py  install-stack.sh
Infra/: check.ps1  main.tf  main.txt  temp.tf
backend/: .dockerignore  QUICKSTART.md  README.md  (+4 more)
backend/microservices/contestant_engine/: CMakeLists.txt  Dockerfile  README.md
backend/microservices/contestant_engine/benchmarks/: performance_benchmark.cpp
backend/microservices/contestant_engine/build-gcc/: CMakeCache.txt
backend/microservices/contestant_engine/build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  fix_engine_tests[1]_include.cmake
backend/microservices/contestant_engine/config/: fix_config.json  risk_config.json  symbols.json  trading_rules.json
backend/microservices/contestant_engine/include/admin/: admin_server.h
backend/microservices/contestant_engine/include/contestant_engine/: tcp_ingress.h
backend/microservices/contestant_engine/include/fix_engine/: fix_message.h  fix_session.h  fix_session_manager.h  message_parser.h
backend/microservices/contestant_engine/include/market_data/: market_data_manager.h  market_data_types.h  matching_engine.h  order_book_level.h  price_generator.h  simulated_exchange.h  symbol_manager.h
backend/microservices/contestant_engine/include/metrics/: metrics_collector.h  metrics_types.h
backend/microservices/contestant_engine/include/order_manager/: execution_report_generator.h  order_book.h  order_manager.h  order_types.h  order_validator.h  position_tracker.h
backend/microservices/contestant_engine/include/performance/: lock_free_queue.h  memory_mapped_file.h  object_pool.h
backend/microservices/contestant_engine/include/persistence/: message_store.h
backend/microservices/contestant_engine/include/risk/: risk_manager.h  risk_types.h
backend/microservices/contestant_engine/include/shadow_engine/: telemetry_bridge.h
backend/microservices/contestant_engine/include/utils/: config_loader.h  logger.h
backend/microservices/contestant_engine/src/: main.cpp
backend/microservices/contestant_engine/src/admin/: admin_server.cpp
backend/microservices/contestant_engine/src/contestant_engine/: tcp_ingress.cpp
backend/microservices/contestant_engine/src/fix_engine/: fix_message.cpp  fix_session.cpp  fix_session_manager.cpp  message_parser.cpp
backend/microservices/contestant_engine/src/market_data/: market_data_manager.cpp  matching_engine.cpp  order_book_level.cpp  price_generator.cpp  simulated_exchange.cpp  symbol_manager.cpp
backend/microservices/contestant_engine/src/metrics/: metrics_collector.cpp
backend/microservices/contestant_engine/src/order_manager/: execution_report_generator.cpp  order_book.cpp  order_manager.cpp  order_validator.cpp  position_tracker.cpp
backend/microservices/contestant_engine/src/persistence/: message_store.cpp
backend/microservices/contestant_engine/src/risk/: risk_manager.cpp  risk_types.cpp
backend/microservices/contestant_engine/src/shadow_engine/: telemetry_bridge.cpp
backend/microservices/contestant_engine/src/utils/: config_loader.cpp  logger.cpp
backend/microservices/contestant_engine/tests/: test_config_loader.cpp  test_fix_message.cpp  test_fix_session.cpp  test_matching_engine.cpp  test_message_parser.cpp  test_message_store.cpp  test_metrics_collector.cpp  test_order_book.cpp  test_order_book_level.cpp  test_order_manager.cpp  test_order_validator.cpp  test_performance.cpp  test_position_tracker.cpp  test_price_generator.cpp  test_risk_manager.cpp  test_symbol_manager.cpp  test_tcp_ingress.cpp
(+105 files in other folders)
